--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -167,7 +167,7 @@ jobs:
         run: |
           cd ./wrt/
 
-          find ./defconfig -type f -iname "*$WRT_CONFIG*" -exec cat {} + | sort | uniq > .config
+          cat $GITHUB_WORKSPACE/Config/$WRT_CONFIG.txt > .config
 
           $GITHUB_WORKSPACE/Scripts/Settings.sh
 
